remove deprecated url method